css/post.css
.ctc-image {
  &::part(button) {
    opacity: 0;
    background: rgb(0 0 0 / 80%);
    transition: opacity 150ms;
  }

  &:hover::part(button) {
    opacity: 1;
  }
}

copy-to-clipboard {
  --ctc-button-color: var(--color-text-primary);
}

back-to-top {
  --btt-button-background: var(--color-bg-secondary);
  --btt-button-background-hover: light-dark(rgb(0 0 0 / 20%), rgb(0 0 0 / 80%));
  --btt-button-color: var(--color-text-primary);
}

figcaption {
  font-size: 0.875rem;
  text-align: center;
}

.container {
  margin: 0 auto;
  max-width: 1024px;
  padding: 0 1rem;
}

.banner {
  align-items: center;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  padding: 0.5rem 1rem;

  a {
    color: var(--color-text-primary);
    display: inline-flex;
    text-decoration: none;
    transition:
      transform 200ms,
      color 200ms;

    &:visited {
      color: var(--color-text-primary);
    }

    &:hover {
      color: var(--color-link-hover);
    }
  }
}

.logo {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1;

  &:hover {
    transform: scale(1.05);
  }
}

.nav {
  align-items: center;
  display: flex;
  flex: 1;
  gap: 1rem;
  justify-content: flex-end;

  a {
    line-height: 1;

    &:hover {
      transform: scale(1.25);
    }
  }
}

.post {
  max-width: 100%;
  overflow: clip;
}

.post-header {
  background: var(--color-bg-secondary);
  margin: 0 0 1rem;
  padding: 1rem 0 0;
}

.post-title {
  font-size: 3rem;
  font-weight: 700;
  line-height: 1.1;
}

.post-meta {
  align-items: baseline;
  display: flex;
  gap: 1rem;
  justify-content: right;
  padding: 1rem 0 0.5rem;
}

.post-date {
  color: var(--color-text-secondary);
  font-size: 0.875rem;
}

.post-content {
  p {
    margin: 0 0 1rem;
    text-wrap: pretty;

    code {
      font-size: 0.875rem;
    }
  }

  h2,
  h3,
  h4 {
    font-weight: 600;
    margin: 2rem 0 1rem;
    text-wrap: pretty;
  }

  h2 {
    font-size: 1.75rem;
    line-height: 1.2;
  }

  h3 {
    font-size: 1.25rem;
    line-height: 1.4;
  }

  h4 {
    font-size: 1rem;
    line-height: 1.4;
  }

  pre {
    font-size: 0.875rem;
    margin: 0 0 2rem;
    overflow: auto;
    padding: 0.5rem;
  }

  img {
    background: var(--color-bg-secondary);
    height: auto;
    margin: 0 auto;
    max-width: 100%;
    padding: 1rem;
  }
}

.post-description {
  color: var(--color-text-secondary);
  font-size: 1.125rem;
  line-height: 1.4;
}

.post-footer {
  background: var(--color-bg-secondary);
  border-top: solid 1px var(--color-border-primary);
  padding: 1rem 0;
}

.licence {
  line-height: 1.75;
}

#share-fallback {
  background: black;
  border: none;
  border-radius: 1rem;
  left: 50%;
  min-width: 280px;
  padding: 2rem;
  top: 50%;
  transform: translate(-50%, -50%);

  &::backdrop {
    background: rgb(0 0 0 / 40%);
  }
}

.share-fallback-title {
  font-size: 1.25rem;
  margin: 0 0 0.5rem;
}

.share-fallback-links {
  display: flex;
  flex-flow: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;

  a,
  a:visited,
  a:hover {
    color: white;
    text-decoration: none;
  }
}

.share-btn {
  align-items: center;
  background: light-dark(var(--color-neutral-100), var(--color-neutral-700));
  border: none;
  border-radius: 999px;
  color: var(--color-text-primary);
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  gap: 0.5rem;
  line-height: 1;
  padding: 0.25rem 0.75rem;
  transition:
    background 200ms,
    color 200ms;

  &:hover {
    background: light-dark(var(--color-primary-100), var(--color-primary-500));
  }
}

.theme-switcher {
  min-height: 2.5rem;
  min-width: 4.375rem;
}

theme-switch {
  --ts-button-color: var(--color-text-primary);
  --ts-button-size: 1.25rem;
  --ts-button-bar-background: var(--color-bg-secondary);
  --ts-lozenge-background: light-dark(var(--color-neutral-100),
      var(--color-neutral-700));
}

@media (pointer: coarse) {
  .theme-switcher {
    min-width: 2.5rem;
  }

  theme-switch {
    --ts-lozenge-background: transparent;

    &::part(button) {
      opacity: 1;
    }

    &::part(button dark) {
      position: absolute;
      top: 0;
      left: 0;
    }

    &[data-theme="dark"] {
      &::part(button dark) {
        visibility: hidden;
      }
    }

    &[data-theme="light"] {
      &::part(button light) {
        visibility: hidden;
      }
    }
  }
}

@media (width >=600px) {
  .post-header {
    padding: 2rem 0 0;
    margin: 0 0 2rem;
  }
}

@media (width >=1024px) {
  .post-content {
    font-size: 1.125rem;

    p {
      code {
        font-size: 1rem;
      }
    }

    pre {
      padding: 1rem;
    }

    h2 {
      font-size: 2rem;
    }
  }

  .post-title {
    font-size: 4rem;
  }

  .post-description {
    font-size: 1.5rem;
  }
}

@keyframes zoom-title {
  to {
    transform: rotate(-10deg) scale(1.5);
    opacity: 0.5;
  }
}

@supports (animation-timeline: scroll()) {
  .post-header {
    animation: zoom-title linear both;
    animation-timeline: scroll();
    animation-range: 0 500px;
  }
}

